# pytorch-extension-demo-v2

./: CMakeLists.txt  install.sh  test.py  triton_hash_encode.py
python/: setup.py
src/: add.cu  operator.h  popc.cu  pybind.cc
tests/: test_add.py  test_popc.py
